         See http://forum.kodi.tv/showthread.php?tid=250936

WIP      Update code to use xbmcgui.Dialog().select() - additions. Get rid of the ImgSelectDialog()
         class. This need Krypton Beta 4 to run!


[B]Advanced Emulator Launcher | version 0.9.5 | XX November 2016[/B]

FEATURE  New command SHOW_ALL_ROMS to render all ROMs in all launchers. Will be used by skins.

WIP      Supend/resume Kodi audio at launching. This will prevent sound problems in Linux. Include
         a setting for this in addons "Settings" --> "Advanced".

WIP      Improve message reporting in Kodi GUI when scanning ROMs.

WIP      Include databases for all supported platforms in AEL offline scraper.

WIP      Advanced fuzzy search engine based on the Levenshtein Distance algortihm, for both
         online and offline scraper.

WIP      Every request must be cached in all online scrapers.

WIP      Extranafart for Categories/Launchers/ROMs.

WIP      Update launching mechanism. User Python subprocess module on all platforms and not the
         deprecated os.system().

WIP      Log emulator/standalone launcher stdout/stderr into a file.

WIP      Improve launcher reports when there is a No-Intro file available.

FIX      Fixed searches in launchers.

FIX      Fixed artwork display in ROM Collections (Icon/Fanart/Banner/Poster).


[B]Advanced Emulator Launcher | version 0.9.4 | 16 October 2016[/B]

FEATURE  Create ROM and standalone launchers in addon root. "Categoryless" launchers.

FEATURE  Improve the repairing for Favourite/Collection ROMs once and for all.

FEATURE  Parent/Clone launcher display option when using No-Intro DATs.

FEATURE  [Recently played ROMs] Virtual Launcher. List of ROMs played in reverse chronological
         order.

FEATURE  [Most played ROMs] Virtual Launcher. Histogram of how many times a ROM has been played,
         ordered by the number of times a ROM has been played.

FIX      Fixed loading of No-Intro files.
