@@ -53,9 +53,10 @@
     <setting label="Collections Asset directory" type="folder" id="collections_asset_dir" default="" source="" />
 </category>
 <category label="Advanced">
-    <setting label="Action on Kodi playing media" type="enum" id="media_state" default="0" values="Stop|Pause|Let Play" />
+    <setting label="Action on Kodi playing media" type="enum" id="media_state_action" default="0" values="Stop|Pause|Let Play" />
     <setting label="Disable LIRC (Linux only)" type="bool" id="lirc_state" default="true" />
-    <setting label="Delay (ms)" type="slider" id="start_tempo" default="500" range="0,100,15000" option="int"/>
+    <setting label="Delay (ms)" type="slider" id="delay_tempo" default="500" range="0,100,15000" option="int"/>
+    <setting label="Suspend/resume Kodi audio engine" type="bool" id="suspend_audio_engine" default="false"/>
     <setting label="Escape ROMfile quotes" type="bool" id="escape_romfile" default="false" />
     <setting label="Import AL launchers.xml..." type="action" option="close" action="RunPlugin(plugin://plugin.program.advanced.emulator.launcher/?com=IMPORT_AL_LAUNCHERS)"/>
 
